--- a/package.json
+++ b/package.json
@@ -3,30 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-  "@emotion/react": "^11.11.1",
-  "@emotion/styled": "^11.11.0",
-  "@fortawesome/fontawesome-free": "^6.4.2",
-  "@mui/icons-material": "^5.14.16",
-  "@mui/joy": "^5.0.0-beta.12",
-  "@mui/material": "^5.14.16",
-  "@mui/styled-engine-sc": "^6.0.0-alpha.3",
-  "@testing-library/jest-dom": "^5.17.0",
-  "@testing-library/react": "^13.4.0",
-  "@testing-library/user-event": "^13.5.0",
-  "autoprefixer": "^9.8.8",
-  "bootstrap": "^5.3.2",
-  "mdb-react-ui-kit": "^6.3.0",
-  "mdb-ui-kit": "^6.4.2",
-  "npm": "^10.2.3",
-  "postcss": "^8.4.31",
-  "postcss-cli": "^10.1.0",
-  "react": "^18.2.0",
-  "react-bootstrap": "^2.9.1",
-  "react-dom": "^18.2.0",
-  "react-router-dom": "^6.17.0",
-  "react-scripts": "^5.0.1",
-  "styled-components": "^6.1.0",
-  "tailwindcss": "^3.3.5",
-  "web-vitals": "^2.1.4"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/joy": "^5.0.0-beta.12",
+    "@mui/material": "^5.14.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^9.8.8",
+    "bootstrap": "^5.3.2",
+    "mdb-react-ui-kit": "^6.3.0",
+    "mdb-ui-kit": "^6.4.2",
+    "npm": "^10.2.3",
+    "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.0",
+    "tailwindcss": "^3.3.5",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
